--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Test Merge</p>
+<p>Correction1</p>
+<p>Test Correction2</p>
+<p>Test Correction3</p>
+
 
 </body>
 </html>
