VCO autres corrections

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <p>Correction1</p>
 <p>Test Correction2</p>
 <p>Test Correction3</p>
+<p>Test Correction4</p>
+<p>Test Correction5</p>
 
 
 </body>
